오 리액트 변환 성공

--- a/week8/package.json
+++ b/week8/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@mediapipe/selfie_segmentation": "^0.1.1675465747",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.0.4",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "wasm-game-of-life": "file:./pkg"
   },
   "devDependencies": {
