--- a/week8/package.json
+++ b/week8/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
     "gsap": "^3.13.0",
+    "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4",
     "wasm-game-of-life": "file:./pkg"
   },
   "devDependencies": {
