--- a/week8/package.json
+++ b/week8/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "gsap": "^3.13.0",
     "motion": "^12.23.24",
+    "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
