--- a/final/package.json
+++ b/final/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.13.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
+    "gsap": "^3.13.0",
     "leva": "^0.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
