--- a/final/package.json
+++ b/final/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.9.5",
+    "rxjs": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "three": "^0.181.0"
   },
