--- a/final/package.json
+++ b/final/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^7.9.5",
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.181.0"
+    "three": "^0.181.0",
+    "zustand": "^5.0.9"
   },
   "engines": {
     "node": ">=20"
